--- a/source/posts/2012-08-03.md
+++ b/source/posts/2012-08-03.md
@@ -6,6 +6,8 @@
 
 Кстати, а ваш какой?
 
+UP: [А еще я перевел текст Роба Пайка про появление файлов с точкой в Unix](http://addmeto.cc/post/2012-08-03-a-lesson-in-shortcuts/). Очень познавательно, очень!
+
 ## Для всех
 * [Adobe выпустили бесплатный, открытый и очень интересный шрифт Source Sans Pro](http://blogs.adobe.com/typblography/2012/08/source-sans-pro.html). Обещают в следующих релизах кириллицу и моноширинный шрифт, я уже весь в нетерпении. #font #adobe
 * [BI: две трети доходов Apple это iPhone!](http://www.businessinsider.com/iphone-profit-2012-8). Серьезная цифра. И вообще, посмотрите на распределение доходов, весьма поучительно. #apple #money
