--- a/source/posts/2012-08-07.md
+++ b/source/posts/2012-08-07.md
@@ -4,7 +4,7 @@
 
 Вид с Марса на Млечный путь. Старая, проверенная шутка.
 На самом деле вот она, ссылка дня:
-[Все подробности и фотки о том, как человечество десантировалось на Марс](http://www.bbc.co.uk/news/science-environment-19150849) в этот раз. BBC как обычно написали текст лучше всех. [На SpaceIndustry чуть подкорректировали фотку, для лучшего вида](http://spaceindustrynews.com/curiosity-mount-sharp-photo/1015/).
+[Все подробности и фотки о том, как человечество десантировалось на Марс](http://www.bbc.co.uk/news/science-environment-19150849) в этот раз. BBC, как обычно, написали текст лучше всех. [На SpaceIndustry чуть подкорректировали фотку, для лучшего вида](http://spaceindustrynews.com/curiosity-mount-sharp-photo/1015/).
 
 И [еще один важный текст - как работает атомная батарея](http://www.about-robots.com/curiosity-rover-nuclear-battery.html), установленная на Curiosity.
 
