Еще немного запятых

--- a/source/posts/2012-08-07.md
+++ b/source/posts/2012-08-07.md
@@ -13,21 +13,21 @@
 -----
 
 ## Для всех
-* [Из чего сделан марсоход Curiosity?](http://programmers.stackexchange.com/questions/159637/what-is-the-mars-curiosity-rovers-software-built-in/159638#159638?) Из 2.5 миллионов строк кода на С. Это, ребята, не мало, совсем не мало. Особенно учитывая тот факт, что проапдейтить код и пофиксить ошибку находу практически невозможно. #mars #code
+* [Из чего сделан марсоход Curiosity?](http://programmers.stackexchange.com/questions/159637/what-is-the-mars-curiosity-rovers-software-built-in/159638#159638?) Из 2.5 миллионов строк кода на С. Это, ребята, не мало, совсем не мало. Особенно учитывая тот факт, что проапдейтить код и пофиксить ошибку на ходу практически невозможно. #mars #code
 * [Еще одна статья, косвенно восхваляющая Stripe](http://www.kalzumeus.com/2012/08/06/stripe-and-ab-testing-made-me-a-small-fortune/). Ну когда уже кто-нибудь сделает что-то похожее для всего мира? Сейчас Страйп работает только в Штатах, но мне-то хочется большего. Кстати, Stripe для меня это образец платежных API - очень уж хорошо написано. #stripe #ab
 * [Психология Удержания Сотрудников](http://www.romymisra.com/the-psychology-of-employee-retention-all-about-stories/). Вопреки названию, статья не про какой-то дебилизм, а про вполне человеческие вещи. Главная мысль выделена болдом - люди не уходят из компании до тех пор, пока могут рассказать о ней хорошую историю. Как только истории пропадают - они уходят. #HR #startup
 * [На вчерашний выпад ибея Амазон ответили странно - аренда книг](http://phx.corporate-ir.net/phoenix.zhtml?c=176060&p=irol-newsArticle&ID=1722921&highlight=). По сути, Амазон предлагает студентам арендовать книги на семестр по цене в 25-50 процентов. Это очень неплохое предложение, хотя, мне кажется, пора переходить на электронные книжки и не париться подобной ерундой. #amazon #war
 * [«Продать» потребителям дропбокс не легко, вот как они это делают](http://theindustry.cc/2012/08/07/dropboxs-onboarding-brilliance/). Хороший разбор маркетинговой составляющей дропбокса. Прямо со скриншотами и объяснением мотивов. На изучение каждому, кто делает новый технологический продукт прямо сейчас. #dropbox #marketing
 * [Закрывается прекрасный проект Fluent.io](http://fluentmail.tumblr.com/post/28767857337/fluent-is-closing). Печаль необычайная. Эта великолепная модель «почты будущего» меня радовала, я надеялся, что мы доживем до того времени, когда все почты будут такими. Но нет, команда распалась и обратно не срослось. #gmail #fluent
 * [VISA отличилась и забанила всех других платежных операторов на Олимпиаде](http://modern-products.tumblr.com/post/28855608626/great-work-visa-now-i-hate-you-london-olympics). Я тоже ненавижу такой тип навязчивой рекламы. Поэтому делюсь с вами своим негодованием :) #visa #fail
-* [Огромная гифка, показывающая как изменяется объем и интенсивность торгов на биржах последние 5 лет](http://blogs.reuters.com/felix-salmon/2012/08/06/chart-of-the-day-hft-edition/). Очень крутая и текст правильный. Они были киборги, они заполонили биржи! #stock
-* [В новом OSX нельзя менять иконки в доке, так что CandyBar теперь раздают на халяву!](http://www.cultofmac.com/182887/candybar-from-panic-gets-mountain-lion-support-goes-free-due-to-uncertain-future/). Вообще грустно конечно, когда разработчики OS нечаянно (я уверен!) разрушают бизнес маленькой компании. #panic #osx
+* [Огромная гифка, показывающая, как изменяется объем и интенсивность торгов на биржах последние 5 лет](http://blogs.reuters.com/felix-salmon/2012/08/06/chart-of-the-day-hft-edition/). Очень крутая и текст правильный. Они были киборги, они заполонили биржи! #stock
+* [В новом OSX нельзя менять иконки в доке, так что CandyBar теперь раздают на халяву!](http://www.cultofmac.com/182887/candybar-from-panic-gets-mountain-lion-support-goes-free-due-to-uncertain-future/). Вообще грустно, конечно, когда разработчики OS нечаянно (я уверен!) разрушают бизнес маленькой компании. #panic #osx
 * [История самой просматриваемой цифровой фотографии в мире](http://www.petapixel.com/2012/08/03/the-most-viewed-photo-of-all-time/). Да, это о зеленых обоях в WindowsXP. #photo #fun
 
 ## Для гиков
 * Праздник! Праздник к нам приходит! [На гитхабе теперь можно просто букмаркать репозитории](https://github.com/blog/1204-notifications-stars). Интересные тебе вещи ты просто помечаешь звездочкой, как у людей. Давно так хотел, даже пользовался сторонними юзерскриптами для этого, но теперь УРА! #github #win
 * Очень люблю опенсорсный хардвер. Вот хороший пример - [опенсорсный 3d принтер](http://pwdr.github.com/). Очень хочу вообще любой 3d принтер для экспериментов, но блин, как же дорого! #3dprint
-* [Еще один твиттер-клиент для Excel](http://mit.edu/~victorj/www/blog/2012/08/06/Twitter-reader-in-Excel-with-Python-and-DataNitro/). Второй на моей памяти, но этот наконец-то работающий! Не знаю? зачем вам это может понадобиться, но как игра для мозгов - забавно. #twitter #excel
+* [Еще один твиттер-клиент для Excel](http://mit.edu/~victorj/www/blog/2012/08/06/Twitter-reader-in-Excel-with-Python-and-DataNitro/). Второй на моей памяти, но этот наконец-то работающий! Не знаю, зачем вам это может понадобиться, но как игра для мозгов - забавно. #twitter #excel
 * [StatWing - средство для визуализации данных](https://www.statwing.com/). Красивый проект, хотя и бесполезный. С тем же успехом можно было всё это и в Excel/Numbers делать. #excel
 * [Маленький скрипт HuffShell](http://paulmckellar.com/huffshell/), позволяющий понять, какие команды вы набираете часто, а какие реже. Написал себе с десяток алиасов на этом фоне, чего и вам советую. #ruby #shell
 
