--- a/source/posts/ustream-2012-05-09.md
+++ b/source/posts/ustream-2012-05-09.md
@@ -20,3 +20,6 @@ Ustream - это самая большая в мире платформа для
 Стоит заметить, прямо сейчас (Wed May  9 23:10:52 MSK 2012), Ustream функционирует нормально. Более того, на главной странице теперь показывается одна из прямых трансялций с пикетов в России.
 
 [Базируется на очень беглом переводе заметки на ТекКранч](http://techcrunch.com/2012/05/09/ustream-says-russian-citizen-journalist-is-the-focus-of-todays-ddos-attack/)
+
+Для гиков.
+[10 хороших причин юзать CoffeeScript](http://www.netmagazine.com/features/10-good-reasons-use-coffeescript) - все-таки кофе читается куда легче обычной джаваскриптовой лапши. #coffeescript
