--- a/source/posts/2012-08-13.md
+++ b/source/posts/2012-08-13.md
@@ -13,7 +13,7 @@ C чего я так взбудоражен, спросите вы? Ну, при
 -----
 
 ## Для всех
-* [Судя по всему Microsoft решили саботировать Do Not Track](http://arstechnica.com/information-technology/2012/08/microsoft-sticks-to-its-guns-keeps-do-not-track-on-by-default-in-ie10/) самым оригинальным образом. Они по прежнему настаивают, что в IE10 фича DNT будет включена по умолчанию. Т.е. все нормальные сайты будут ее просто игнорировать. Вся идея DNT была в том, чтобы опытные, понимающие пользователи могли включить ее в настройках. Мда, 1st microsoft way. #microsoft #dnt #browser
+* [Судя по всему, Microsoft решили саботировать Do Not Track](http://arstechnica.com/information-technology/2012/08/microsoft-sticks-to-its-guns-keeps-do-not-track-on-by-default-in-ie10/) самым оригинальным образом. Они, по-прежнему, настаивают, что в IE10 фича DNT будет включена по умолчанию. Т.е. все нормальные сайты будут ее просто игнорировать. Вся идея DNT была в том, чтобы опытные, понимающие пользователи могли включить ее в настройках. Мда, 1st microsoft way. #microsoft #dnt #browser
 * [Марсианское любопытство получило апдейт софта](http://www.nasa.gov/mission_pages/msl/news/msl20120810.html). Учитесь, мужики, апдейтить компьютер на расстоянии земля-марс - это вам не в тапки байты переслать! #mars #update
 * [Моторола, продавшая себя гуглу, сокращает штат на 20%](http://www.nytimes.com/2012/08/13/technology/motorola-to-cut-20-of-work-force-part-of-sweeping-change.html?_r=2&pagewanted=all). Ну правильно, покупали же патенты, а кроме патентов там уже ничего и небыло. Всё же рынок IP очень сильно рушит рынок труда. #motorola #google
 * Google анонсировали эксперимент, позволяющий видеть результаты поиска по почте прямо в выдаче большого поиска. Параноики-нетехнари в шоке. Но это не интересно, интересно наоборот почитать, [что по этому поводу думают гики](http://news.ycombinator.com/item?id=4356829) на hackers news #google #search
