--- a/source/posts/2012-08-13.md
+++ b/source/posts/2012-08-13.md
@@ -15,20 +15,20 @@ C чего я так взбудоражен, спросите вы? Ну, при
 ## Для всех
 * [Судя по всему Microsoft решили саботировать Do Not Track](http://arstechnica.com/information-technology/2012/08/microsoft-sticks-to-its-guns-keeps-do-not-track-on-by-default-in-ie10/) самым оригинальным образом. Они по прежнему настаивают, что в IE10 фича DNT будет включена по умолчанию. Т.е. все нормальные сайты будут ее просто игнорировать. Вся идея DNT была в том, чтобы опытные, понимающие пользователи могли включить ее в настройках. Мда, 1st microsoft way. #microsoft #dnt #browser
 * [Марсианское любопытство получило апдейт софта](http://www.nasa.gov/mission_pages/msl/news/msl20120810.html). Учитесь, мужики, апдейтить компьютер на расстоянии земля-марс - это вам не в тапки байты переслать! #mars #update
-* [Моторола, продавшая себя гуглу, сокращает штат на 20%](http://www.nytimes.com/2012/08/13/technology/motorola-to-cut-20-of-work-force-part-of-sweeping-change.html?_r=2&pagewanted=all). Ну правильно, покупали же патенты, а кроме патентов там уже ничего и небыло. Всё же рынок IP очень сильно рушит рынок труда. #motorola #google
+* [Моторола, продавшая себя гуглу, сокращает штат на 20%](http://www.nytimes.com/2012/08/13/technology/motorola-to-cut-20-of-work-force-part-of-sweeping-change.html?_r=2&pagewanted=all). Ну правильно, покупали же патенты, а кроме патентов там уже ничего и не было. Всё же, рынок IP очень сильно рушит рынок труда. #motorola #google
 * Google анонсировали эксперимент, позволяющий видеть результаты поиска по почте прямо в выдаче большого поиска. Параноики-нетехнари в шоке. Но это не интересно, интересно наоборот почитать, [что по этому поводу думают гики](http://news.ycombinator.com/item?id=4356829) на hackers news #google #search
 * [Хорошая инфографика о том, почему G+ это кладбище аккаунтов](http://mashable.com/2012/08/08/infographic-google-plus-ghost-town/). Короткий пересказ: там обмениваются информацией в 60 раз меньше, чем в фейсбуке. С другой стороны, свою функцию «стучать в Гугл реальными данными о человеках» Г+ исполняет хорошо, аккаунтов там довольно много и почти во всех указаны настоящие имя-фамилия-возраст. #gplus
-* [Дизайнерские штучки: не используйте чистый черный](http://ianstormtaylor.com/design-tip-never-use-black/). Я в дизайне ничего не понимаю, для меня это было открытием, оказывается никто из дизайнеров никогда не использует чистый черный цвет, он слишком яркий. #design #colors
-* [Очень интересное приложение Burner](http://blog.burnerapp.com/introducing-burner-temporary-phone-numbers-fo), создающее временные телефонные номера, на/с которых вы можете звонить. «Временные» означает что через какое-то время телефон вернется в пулл «общих» и его займет кто-то другой. Теперь я знаю какой номер давать девушкам, вместо телефона китайской прачечной! #mobile
+* [Дизайнерские штучки: не используйте чистый черный](http://ianstormtaylor.com/design-tip-never-use-black/). Я в дизайне ничего не понимаю, для меня это было открытием, оказывается, никто из дизайнеров никогда не использует чистый черный цвет, он слишком яркий. #design #colors
+* [Очень интересное приложение Burner](http://blog.burnerapp.com/introducing-burner-temporary-phone-numbers-fo), создающее временные телефонные номера, на/с которых вы можете звонить. «Временные» означает что через какое-то время телефон вернется в пулл «общих», и его займет кто-то другой. Теперь я знаю какой номер давать девушкам, вместо телефона китайской прачечной! #mobile
 * Недавно BitTorrent выпустили плагин для браузеров Torque, я про это писал. Так вот, на базе Torque [запустили новый сервис OneHash](http://www.ghacks.net/2012/08/10/bittorrent-launches-onehash-torrent-web-streaming/), главный смысл которого - позволить играть музыку и фильмы прямо из торрентов. До этого попыток было много, но это первый проект, про который я верю что он будет работать. Жду с нетерпением. #bittorrent #torque
 
 ## Для гиков
-* [Как настоящий гик обустраивает библиотеку](http://jorendorff.github.com/hackday/2012/library/), или «бинарный поиск, деревья и сортировка в реальном мире». Мне очень понравилось, а некоторые вещи я бы даже пожалуй стал применять в жизни. Рассказ, кстати, написан на базе вполне себе работающей Нэшвильской публичной библиотеки. #rl
-* [Возможно в свежем Debian по умолчанию будет грузиться XFCE](http://www.h-online.com/open/news/item/Debian-to-use-Xfce-as-its-standard-desktop-1663868.html). Ну правильно, давайте еще CDE, который недавно как раз в опенсорс вышел. А лучше обратно к MWM! С недавних пор я перестал считать Debian десктопным линуксом, теперь только Ubuntu и Fedora. #linux
+* [Как настоящий гик обустраивает библиотеку](http://jorendorff.github.com/hackday/2012/library/), или «бинарный поиск, деревья и сортировка в реальном мире». Мне очень понравилось, а некоторые вещи я бы даже, пожалуй, стал применять в жизни. Рассказ, кстати, написан на базе вполне себе работающей Нэшвильской публичной библиотеки. #rl
+* [Возможно, в свежем Debian по умолчанию будет грузиться XFCE](http://www.h-online.com/open/news/item/Debian-to-use-Xfce-as-its-standard-desktop-1663868.html). Ну правильно, давайте еще CDE, который недавно как раз в опенсорс вышел. А лучше обратно к MWM! С недавних пор я перестал считать Debian десктопным линуксом, теперь только Ubuntu и Fedora. #linux
 * [Учебник по PowerShell для программистов](https://github.com/dfinke/powershell-for-developers). Положил себе на iPad, буду читать в туалете :) #windows #powershell
 * [10gen выпустили Mongo Connector](http://blog.mongodb.org/post/29127828146/introducing-mongo-connector), это такая штука, позволяющая налету пушить данные из монго в другие источники. В их примерах самое важное - пушить данные из монго в Solr, чтобы организовывать realtime поиск. Очень хорошо, да еще и написано чистенько. #mongo #solr
 * [Сравнение производительности jQuery, Zepto и jQMobile](http://www.codefessions.com/2012/08/performance-of-jquery-compatible-mobile.html?spref=tw). Во многих аспектах оказалось не в пользу «микрофреймворков», что меня крайне удивляет. #javascript #html
-* [Подборка из известных стайлгайдов для CSS](http://css-tricks.com/css-style-guides/) разных компаний и производственных объединений. Каждый раз, когда я читаю что-то подобное, я жалею что ничерта не понимаю на фронтенде :( #html #css
+* [Подборка из известных стайлгайдов для CSS](http://css-tricks.com/css-style-guides/) разных компаний и производственных объединений. Каждый раз, когда я читаю что-то подобное, я жалею, что ничерта не понимаю на фронтенде :( #html #css
 * [Беглый обзор работы Cling](http://blog.coldflake.com/posts/2012-08-09-On-the-fly-C%2B%2B.html), такого довольно старого уже интерпретатора C/C++. Если вы не в курсе, Cling это развитие старого проекта [CINT](http://root.cern.ch/drupal/content/cint), только на базе LLVM. #cxx #c
 
 ## Разное
