--- a/source/posts/2012-08-21-geekery.md
+++ b/source/posts/2012-08-21-geekery.md
@@ -3,7 +3,7 @@
 *Этот текст я перепечатываю раз в год-два, для того, чтобы напомнить о нем людям. Если вы его сейчас наблюдаете — значит я его опять перепечатал*
 
 Ах, этот волшебный гик...
-<a href=http://img-fotki.yandex.ru/get/6604/9320383.8/0_7d06a_9fe49a43_orig ><img src=http://img-fotki.yandex.ru/get/6604/9320383.8/0_7d06a_9fe49a43_L /></a>
+<a href='http://img-fotki.yandex.ru/get/6604/9320383.8/0_7d06a_9fe49a43_orig'><img src='http://img-fotki.yandex.ru/get/6604/9320383.8/0_7d06a_9fe49a43_L'/></a>
 
 Его нужды необычны и тем самым привлекательны ему самому. В его голове существует прекрасный, правильный мир, к которому причастен он. Каждый гик знает — он «продвинутый пользователь», тем самым как бы опуская пользователя не продвинутого на уровень табуретки.  В реальном же мире гик это трогательное, бесполезное существо, идеальный потребитель, воспитанный современной культурой. Его цель — потреблять и перерабатывать. Да, это может быть жестко, но правда довольно редко бывает приятной.
 
