--- a/source/posts/2012-08-21.md
+++ b/source/posts/2012-08-21.md
@@ -21,7 +21,7 @@
  
 ## Для гиков
 * [BaseRock оказывается продает сервера с 8мью вычислительными нодами на ARM в одном юните](http://www.baserock.com/servers/feature-tour). Просто мечта. Если буду покупать место в стойке - закажу себе такой. Устал от интел-совместимого.
-* [Святая реликвия: письмо Тима Бернерса-Ли о релизе превого браузера и первого сервера для интернета](https://groups.google.com/forum/?fromgroups=#!topic/comp.sys.next.announce/avWAjISncfw[1-25]). Письмо от 20 августа 1991, браузер называется WorldWideWeb, работает он только на NeXT/NeXTStep и доступен в исходниках. Это дело надо отметить.
+* [Святая реликвия: письмо Тима Бернерса-Ли о релизе первого браузера и первого сервера для интернета](https://groups.google.com/forum/?fromgroups=#!topic/comp.sys.next.announce/avWAjISncfw[1-25]). Письмо от 20 августа 1991, браузер называется WorldWideWeb, работает он только на NeXT/NeXTStep и доступен в исходниках. Это дело надо отметить.
 * [На Raspberry Pi можно поставить FreeBSD](http://kernelnomicon.org/?p=164). Оба фаната очень ликуют и кидают в воздух бороды и свитера! Не, если серьезно, я не понимаю почему не netbsd, у тех хотябы хобби такое - портироваться на все платформы.
 * [Относительно старая, но забавная информация, популярность разных JS библиотек в интернете](http://blog.whitehatsec.com/analysis-of-javascript-library-popularity/). С гиганским отрывом от всех, впереди jquery.
 * [Зарелизился Twitter Bootstrap 2.1](http://blog.getbootstrap.com/2012/08/20/bootstrap-2-1-0-released/). Наконец-то увеличили шрифты! А еще добавились стили у картинок и проект Glyphicons теперь официально поддерживается бутстрапом.
