--- a/source/posts/2012-08-21.md
+++ b/source/posts/2012-08-21.md
@@ -11,7 +11,7 @@
 -----
 
 ## Для всех
-* [Поучительно о том, как молодой Microsoft и молодой Гейтс общались по поводу торгового знака IE](http://steveblank.com/2012/08/20/when-microsoft-sued-us-over-the-letter-e/). Вчитайтесь в письмо Гейтса, это же поэма!
+* [Поучительно о том, как молодой Microsoft и молодой Гейтс общались по поводу торгового знака IE](http://steveblank.com/2012/08/20/when-microsoft-sued-us-over-the-letter-e/). Вчитайтесь в письмо Гейтсу, это же поэма!
 * [Как Эдуардо Сэверин «продавал» фейсбук в 2004ом](http://www.digiday.com/platforms/how-eduardo-saverin-sold-facebook-ads-in-2004/). Есть прямо отсканированные распечатки презентации. В то время он еще назывался TheFaceBook.com :)
 * [Инстаграм мог получить и поболее](http://dealbook.nytimes.com/2012/08/20/how-instagram-could-have-cut-a-better-deal/), пишет NYT, намекая на детали сделки. А детали такие - $300M в деньгах, и 23 миллиона акций facebook из оценки $30 за акцию. Т.е. шутка про «1 инстаграмм долларов» уже не справедлива, теперь это около $750M всего-то.
 * [Стартаперам и ангел-инвесторам - калькулятор потенциальных долей и выручек](http://www.foundersfund.com/termsheet/). Работает, я проверил. Но я всё равно по привычке, на глаз.
