--- a/source/posts/2012-08-23.md
+++ b/source/posts/2012-08-23.md
@@ -19,7 +19,7 @@
 * [Моя мечта! Virgin запустили телефон на базе SGS2, но на 4G](http://www.theverge.com/2012/8/22/3261452/boost-virgin-prepaid-carries-Galaxy). Жалко конечно что WiMax, я всё жду когда уже придет LTE и мы все будем коммуникать друг друга по IPv6. #mobile
 * [IE это довольно уважаемый браузер](http://thenextweb.com/insider/2012/08/22/mozillas-andreas-gal-internet-explorer-9-pretty-respectable-browser/), пишет TNW. И это правда. В одном из проектов, которым я стараюсь заниматься, произошел прорыв. Во второй инкарнации проекта нет ни одной заточки «специально для IE», и всё работает. Ну, кроме некоторых деталей визуализации.
 * [Все уже забыли, но вот список инноваций, которые Internet Explorer принес в мир](http://www.nczonline.net/blog/2012/08/22/the-innovations-of-internet-explorer/). Тут правда надо заметить, это список инноваций за 15 лет. #browser
-* [Опера отчиталась за втрой квартал](techcrunch.com/2012/08/22/opera-q2-mobile-browse/). Они очень неплохо (для альтернативного браузера) зарабатывают. Продлили эксклюзивный мировой контракт, по которому гугл платит за форму поиска, где он по умолчанию. В общем хорошо идут, в мобильном даже растут. #opera #mobile #browser
+* [Опера отчиталась за втрой квартал](http://techcrunch.com/2012/08/22/opera-q2-mobile-browse/). Они очень неплохо (для альтернативного браузера) зарабатывают. Продлили эксклюзивный мировой контракт, по которому гугл платит за форму поиска, где он по умолчанию. В общем хорошо идут, в мобильном даже растут. #opera #mobile #browser
 * [GoNote - десятидюймовый ноутбук на андроиде](http://www.ergoelectronics.com/products/10inch-gonote-touchscreen-android-4-netbook-gnt10). Вот, первый случай, когда «хочу-хочу». Выглядит очень хорошо, гораздо лучше того, что продают под видмо «хромбуков». #android #hardware
 * [А вот олицетворение моей любимой шутки: никон выпустили телефон. Он не звонит, но камера 16мегапикселей](http://www.bhphotovideo.com/indepth/announcements/new-android-powered-nikon-coolpix-s800c?BI=8938&kw=S800c). На самом деле это конечно фотоаппарат, под управлением Android 2.3. Интересно, за сколько минут кончается батарейка этого фотоаппарата? А со вспышкой?
 
