--- a/source/posts/2012-08-30.md
+++ b/source/posts/2012-08-30.md
@@ -44,7 +44,7 @@
 ## Для гиков
 * [Интел выложили сорцы Android for Intel Architecture](https://01.org/android-ia/). Я всё жду тонких, маленьких ноутбучиков с бесконечной батареей и за 200 долларов. Идеальный прибор для «взять с собой в дорогу».
 * [Первый кросс-платформенный троян, Wirenet-1](http://www.theregister.co.uk/2012/08/29/linux_mac_trojan/), поражает, как утверждается, Linux и Mac, собирает нажатия клавиш, открывает удаленный доступ на машину и вообще занимается полезными делами. Да, живет только в пределах домашней папки. Как он, работая от пользователя, умудряется собирать под маком нажатия клавиш - для меня загадка.
-* [Стоило Apple убрать из 10.8 иксы, как на gimp.org появилась официальная сборка Gimp без X11 для MacOS](http://osxdaily.com/2012/08/28/gimp-free-photoshop-alternative-mac-os-x/). Если у вас он падает - перезапустите раз 5. Что-то он там не может собрать в домащней папке.
+* [Стоило Apple убрать из 10.8 иксы, как на gimp.org появилась официальная сборка Gimp без X11 для MacOS](http://osxdaily.com/2012/08/28/gimp-free-photoshop-alternative-mac-os-x/). Если у вас он падает - перезапустите раз 5. Что-то он там не может собрать в домашней папке.
 * [Большая инфографическая портянка о самых форкабельных репозиториях на GitHub](http://www.moretechtips.net/2012/08/most-forked-github-repositories.html).  Можно то же самое [посмотреть без инфографики](https://github.com/popular/forked).
 * [BI написал про LightTable](http://www.businessinsider.com/this-startup-is-finally-changing-the-way-programming-works-after-more-than-30-years-2012-8) как про стартап, который «буквально изменяет способ разработки приложений». Брета Виктора почему-то никто в статье не упоминает ни разу.
 * [«Злобные хакеры» нашли, как вызвать Inspector в аппсторе](http://osxdaily.com/2011/09/07/enable-element-inspector-mac-app-store/) и других системных утилитах OSX, написанных на html5.
