--- a/source/posts/2012-08-31.md
+++ b/source/posts/2012-08-31.md
@@ -2,6 +2,10 @@
 Все как обычно, в пятницу всегда мало и вперемешку.
 Пишите свои интересные новости в комментариях и удачных вам выходных.
 
+![center](http://d24w6bsrhbeh9d.cloudfront.net/photo/4648170_700b.jpg)
+
+----
+ 
 * [Лучший интерфейс - отсутствие интерфейса](http://www.cooper.com/journal/2012/08/the-best-interface-is-no-interface.html/). Согласен на все сто процентов. Для меня идеальный гаджет тот, который просто делает своё дело, не утомляя меня интерфейсами, кнопками и прочей ерундой. #ux
 * [Oracle знали о дырке в Java еще с апреля!](http://www.theregister.co.uk/2012/08/30/oracle_knew_about_flaws/). Если это правда - это ни в какие ворота вообще :( #security
 * [Kindle Fire распроданы все. Ждем Fire2](http://www.geek.com/articles/gadgets/amazon-announces-kindle-fire-is-sold-out-forever-kindle-fire-2-next-week-20120830/). Есть две читалки, которые я сейчас хочу. Nook Simple Touch with Glowlight и вот этот Fire2. Очень хочу верить, что скоро хорошие планшетки будут выпускать не только в Apple. #kindle #nook #fire2
