--- a/source/posts/2012-09-03.md
+++ b/source/posts/2012-09-03.md
@@ -3,11 +3,11 @@
 -----
 
 ## Для всех
-* [Видеоролик, показывающий как будут выглядеть новые наушники от Apple](http://www.macrumors.com/2012/09/01/video-shows-completely-redesigned-headphones-for-iphone-5/). Неужели это правда, и обычным белым затычкам пришел конец? Слава Джобсу! #apple
-* [Windows 7 наконец-то стал больше, чем WindowsXP](http://thenextweb.com/microsoft/2012/09/01/windows-7-finally-overtakes-windows-xp-mac-os-x-overtakes-windows-vista/). В этой же статье четко указана доля MacOS - 7%. **а я говорил!!!**, а вы «это не про геев» :)
-* [Bing теперь предлагает залогиниться и поискать по фоточкам в фейсбуке](http://www.digitaltrends.com/social-media/bing-now-lets-you-search-through-facebook-photos/). Мне кажется, что бинг идет правильным путем - работа с социальными сетями, а не попытка создать новую соцсеть. #bing #facebook
-* [Приложение, которое показывает ВАШИ посты из фейсбука в правильном порядке](http://mashable.com/2012/09/02/good-sort-facebook-app/). Я вам уже писал как то, мне кажется, что сейчас выдача фейсбука для меня не подходит. Посмотрим как оно там, насколько Good этот новый Sort, хотя бы для своих данных. #facebook
-* [40% кликов в рекламу на мобильном - либо фрод, либо случайность](http://gigaom.com/2012/08/31/report-40-percent-of-mobile-clicks-are-fraud-or-accidents/). Это неприятная для меня новость, я наоборот надеялся, что цифры мобильной рекламы слегка занижены. Вы смотрите рекламу на своих андроидах? Бывало ли, что кликали на баннеры? #mobile #ad
+* [Видеоролик, показывающий, как будут выглядеть новые наушники от Apple](http://www.macrumors.com/2012/09/01/video-shows-completely-redesigned-headphones-for-iphone-5/). Неужели это правда, и обычным белым затычкам пришёл конец? Слава Джобсу! #apple
+* [Windows 7 наконец-то стал больше, чем WindowsXP](http://thenextweb.com/microsoft/2012/09/01/windows-7-finally-overtakes-windows-xp-mac-os-x-overtakes-windows-vista/). В этой же статье чётко указана доля MacOS - 7%. **а я говорил!!!**, а вы - «это не про геев» :)
+* [Bing теперь предлагает залогиниться и поискать по фоточкам в фейсбуке](http://www.digitaltrends.com/social-media/bing-now-lets-you-search-through-facebook-photos/). Мне кажется, что бинг идёт правильным путем - работа с социальными сетями, а не попытка создать новую соцсеть. #bing #facebook
+* [Приложение, которое показывает ВАШИ посты из фейсбука в правильном порядке](http://mashable.com/2012/09/02/good-sort-facebook-app/). Я вам уже писал как то - мне кажется, что сейчас выдача фейсбука для меня не подходит. Посмотрим, как оно там, насколько Good этот новый Sort, хотя бы для своих данных. #facebook
+* [40% кликов в рекламу на мобильном - либо фрод, либо случайность](http://gigaom.com/2012/08/31/report-40-percent-of-mobile-clicks-are-fraud-or-accidents/). Это неприятная для меня новость, я, наоборот, надеялся, что цифры мобильной рекламы слегка занижены. Вы смотрите рекламу на своих андроидах? Бывало ли, что кликали на баннеры? #mobile #ad
 * [Сравнение <s>10</s> 11 новостных агрегаторов для мобильного](http://www.simplyzesty.com/mobile/the-11-best-news-aggregator-apps-for-those-on-the-go/). Я про все знал, но интересно на них посмотреть в одной статье. #mobile #news
 * [Говорят, что 95% проблем с айпадом лечится ребутом](http://reviews.cnet.com/8301-19512_7-57331922-233/how-to-fix-95-percent-of-ios-app-crashes/). У вас такое было? Я попадал в такую ситуацию всего один раз, во времена третьей iOS.
 * Для App.Net наконец-то [выпустили мобильный клиент для iOS](http://thenextweb.com/apps/2012/09/01/the-first-dedicated-app-net-client-ios-hits-app-store/), называется Rhino. Я там @bobuk, как в твиттере, если вы не в курсе. #adn
@@ -19,7 +19,7 @@
 * [15 советов, как сделать твой мобильный сайт быстрее](http://www.speedawarenessmonth.com/15-things-for-making-your-site-faster-for-mobile-users/). Это в смысле «производительнее», а не в смысле «сделать быстрее» :) #mobile
 * [Почему мне никто раньше не показал autopep8?](http://pypi.python.org/pypi/autopep8). Отличная штука, автоматический форматер. `autopep8 *.py && git diff` по всем репозиториям сразу. #python #pep8
 * [Windows8-styled интерфейсы с помощью CSS](http://www.noupe.com/css/metro-ui-css-own-tiled-website-71225.html). Это отлично, теперь открываешь сайт - а там винда :) #w8 #css
-* [2012ый год. В virtualenv 1.8 отказались от поддержки py2.4](http://pypi.python.org/pypi/virtualenv/1.8). У меня все новые проекты, во всём кроме веба, бегут на py3.2, а у вас? #python
+* [2012 год. В virtualenv 1.8 отказались от поддержки py2.4](http://pypi.python.org/pypi/virtualenv/1.8). У меня все новые проекты, во всём кроме веба, бегут на py3.2, а у вас? #python
 * [Длинный пост Миши Коробова про быстрые нестандартные структуры данных в python](http://kmike.ru/python-data-structures/). В списке библиотеки, которые написаны на C/C++ и, как следствие, работают очень быстро. #python #cpp
 
 *Сегодня новостей мало. Скучные были выходные.*
