--- a/source/posts/2012-09-06.md
+++ b/source/posts/2012-09-06.md
@@ -2,6 +2,8 @@
 
 Это, кажется, второй и последний выпуск на неделе. Я завтра в Минске, не уверен что у меня там будет время. Кто возьмется написать завтрашний выпуск целиком? :)
 
+![center](http://www.blogcdn.com/www.comicsalliance.com/media/2011/03/justice-league-international.jpg)
+
 -----
 
 ## Для всех
