Fixed typo. «веротлетов»

--- a/source/posts/2012-09-06.md
+++ b/source/posts/2012-09-06.md
@@ -32,5 +32,5 @@
 
 ## Видео
 * [Ролик с рекламой камеры в новых телефонах нокии](http://www.youtube.com/watch?v=cimDfEIEiu0).
-* [Просто невероятно прекрасное зрелище - 49 управляемых веротлетов с лампочками](http://www.youtube.com/watch?v=ShGl5rQK3ew). Сижу и восторгаюсь уже третий раз.
+* [Просто невероятно прекрасное зрелище - 49 управляемых вертолетов с лампочками](http://www.youtube.com/watch?v=ShGl5rQK3ew). Сижу и восторгаюсь уже третий раз.
 * [Очень красивый туториал про написание приложений с вебсокетами](http://tutorial.kaazing.com/). Но самое красивое в нем - плейер ваймео. Зацените! #vimeo #tutorial
